--- a/lab6.html
+++ b/lab6.html
@@ -6,14 +6,18 @@
     <title>Spotify Clone | Explore Popular Music</title>
     <meta name="description" content="Discover trending artists, albums, and playlists on our Spotify clone website. Enjoy popular music and find new favorites.">
     <meta property="og:title" content="Spotify Clone | Explore Popular Music">
+    <meta property="og:type" content="website">
     <meta property="og:description" content="Discover trending artists, albums, and playlists.">
-    <meta property="og:image" content="pic/Spotify_Primary_Logo_RGB_White.png">
-    <meta property="og:url" content="http://spotfy.com">
+    <meta property="og:image" content="https://github.com/hulanbn/jrabitu/blob/main/pic/Spotify_Primary_Logo_RGB_White.png">
+    <meta property="og:url" content="https://hulanbn.github.io/jrabitu//">
+    <meta property="og:site_name" content="Spotify Clone">
+    <meta property="og:locale" content="en_US">
+    
 
     <link rel="canonical" href="https://hulanbn.github.io/jrabitu/lab6.html">
 
 
-    <link rel="stylesheet" href="./css/lab6-style.css">
+    <link rel="stylesheet" href="./css/minified-lab6.css">
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Spotify_logo_without_text.svg/2048px-Spotify_logo_without_text.svg.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -23,7 +27,7 @@
 <body id="top">
     <header class="header" role="banner">
         <div class="logo">
-            <a href="" aria-label="Spotify Home"><img src="pic/Spotify_Primary_Logo_RGB_White.png" width="" height="30" alt="Spotify logo"></a>
+            <a href="" aria-label="Spotify Home"><img src="pic/Spotify_Primary_Logo_RGB_White.png" width="" height="30" alt="Spotify logo" loading="lazy"></a>
         </div>
         <div class="home">
           <div class="home-bttn">
@@ -151,7 +155,7 @@
               <h1>Popular albums and singles</h1>
               <div class="card">
                   <div class="item">
-                      <img src="./pic/spotfy/o.jpg" alt="O by 290">
+                      <img src="./pic/spotfy/o.jpg" alt="O by 290" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
@@ -159,7 +163,7 @@
                       <p>290</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/hit me hard and soft.jpg" alt="Hit me hard and soft by Billie Eilish">
+                      <img src="./pic/spotfy/hit me hard and soft.jpg" alt="Hit me hard and soft by Billie Eilish" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
@@ -167,7 +171,7 @@
                       <p>Billie Eilish</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/gund.jpg" alt="Gund by AM-C">
+                      <img src="./pic/spotfy/gund.jpg" alt="Gund by AM-C" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
@@ -175,7 +179,7 @@
                       <p>AM-C</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/odyssei.jpg" alt="ODYSSEY by Rokit Bay">
+                      <img src="./pic/spotfy/odyssei.jpg" alt="ODYSSEY by Rokit Bay" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
@@ -183,7 +187,7 @@
                       <p>Rokit Bay</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/gnx.jpg" alt="GNX by Kendrick Lamar">
+                      <img src="./pic/spotfy/gnx.jpg" alt="GNX by Kendrick Lamar" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
@@ -191,7 +195,7 @@
                       <p>Kendrick Lamar</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/muse.jpg" alt="Muse by Jimin">
+                      <img src="./pic/spotfy/muse.jpg" alt="Muse by Jimin"loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
@@ -204,42 +208,42 @@
               <h1>Popular radio</h1>
               <div class="card">
                   <div class="item">
-                      <img src="./pic/spotfy/en (1).jpg" alt="Play radio Calvin Harris">
+                      <img src="./pic/spotfy/en (1).jpg" alt="Play radio Calvin Harris" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>With Calvin Harris, Avicii, Pitbull and more</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/en (2).jpg" alt="Play radio Sash">
+                      <img src="./pic/spotfy/en (2).jpg" alt="Play radio Sash" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>With Sash., Vande, Vandebo and more</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/en (3).jpg" alt="Play radio Davaidasha">
+                      <img src="./pic/spotfy/en (3).jpg" alt="Play radio Davaidasha" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>With AM-C, Davaidasha, Vande and more</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/en (4).jpg" alt="Play radio Vande">
+                      <img src="./pic/spotfy/en (4).jpg" alt="Play radio Vande" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>With AM-C, Vande, 290 and more</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/en.jpg" alt="Play radio ThunderZ">
+                      <img src="./pic/spotfy/en.jpg" alt="Play radio ThunderZ" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>With Davaidasha, ThunderZ, Vandebo and more</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/en (5).jpg" alt="Play radio">
+                      <img src="./pic/spotfy/en (5).jpg" alt="Play radio" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
@@ -251,42 +255,42 @@
               <h1>Featured Chart</h1>
               <div class="card">
                   <div class="item">
-                      <img src="./pic/spotfy/region_global_default (1).jpg" alt="Weekly update">
+                      <img src="./pic/spotfy/region_global_default (1).jpg" alt="Weekly update" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>Your weekly update of the most played...</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/region_us_default (1).jpg" alt="Weekly update">
+                      <img src="./pic/spotfy/region_us_default (1).jpg" alt="Weekly update" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>Your weekly update of the most played...</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/region_global_default.jpg" alt="Most played">
+                      <img src="./pic/spotfy/region_global_default.jpg" alt="Most played" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>Your daily update os the most played...</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/region_us_default.jpg" alt="Most played">
+                      <img src="./pic/spotfy/region_us_default.jpg" alt="Most played" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>Your daily update of the most played...</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/region_global_default (2).jpg" alt="Daily update">
+                      <img src="./pic/spotfy/region_global_default (2).jpg" alt="Daily update" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>Your daily update of the most viral track...</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/region_us_default (2).jpg" alt="Daily update">
+                      <img src="./pic/spotfy/region_us_default (2).jpg" alt="Daily update" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
@@ -298,42 +302,42 @@
               <h1>2024 Wrapped</h1>
               <div class="card">
                   <div class="item">
-                      <img src="./pic/spotfy/wrapped 1.jpg" alt="2024 playlist">
+                      <img src="./pic/spotfy/wrapped 1.jpg" alt="2024 playlist" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>Songs we slept to in 2024</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/wrapped 2.jpg" alt="2024 playlist">
+                      <img src="./pic/spotfy/wrapped 2.jpg" alt="2024 playlist" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>RNB X Presents Best Songs of 2024</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/wrapped 3.jpg" alt="Jazz 2024 playlist">
+                      <img src="./pic/spotfy/wrapped 3.jpg" alt="Jazz 2024 playlist"loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>State of Jazz Presents Best Jazz of 2024</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/wrapped 4.jpg" alt="2024 Global playlist">
+                      <img src="./pic/spotfy/wrapped 4.jpg" alt="2024 Global playlist" loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>Top Artist of 2024 Global</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/wrapped 5.jpg" alt="Ambient 2024 playlist">
+                      <img src="./pic/spotfy/wrapped 5.jpg" alt="Ambient 2024 playlist"loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
                       <p>KBest of Ambient X 2024</p>
                   </div>
                   <div class="item">
-                      <img src="./pic/spotfy/wrapped 6.jpg" alt="Lofi 2024 playlist">
+                      <img src="./pic/spotfy/wrapped 6.jpg" alt="Lofi 2024 playlist"loading="lazy">
                       <div class="play-bttn">
                           <i class="fa-solid fa-play"></i>
                       </div>
