--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li> <a href="./lab6.html">lab6</a></li>
         <li> <a href="./lab7.html">lab7</a></li>
         <li> <a href="./lab8.html">lab8</a></li>
+        <li> <a href="./lab9.html">lab9</a></li>
+        <li> <a href="./lab10.html">lab10</a></li>
+        <li> <a href="./bie-daalt.html">bie daalt</a></li>
     
     </ul>
     
