--- a/lab9.html
+++ b/lab9.html
@@ -19,7 +19,7 @@
         <p class="hint-text hide"></p>
     </section>
 
-    <!-- Lives Section -->
+    <!-- ami -->
     <section class="lives-container hide">
         <p class="lives-text">Амь: 5</p>
     </section>
