--- a/extras/Untitled-1.html
+++ b/extras/Untitled-1.html
@@ -14,7 +14,7 @@
     <meta property="og:locale" content="en_US">
 
     <link rel="canonical" href="https://hulanbn.github.io/jrabitu/lab6.html">
-    <link rel="stylesheet" href="./css/lab7-style.css">
+    <link rel="stylesheet" href="./Untitled-1.css">
 
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
 
