--- a/lab7.html
+++ b/lab7.html
@@ -16,7 +16,7 @@
     <link rel="canonical" href="https://hulanbn.github.io/jrabitu/lab6.html">
     <link rel="stylesheet" href="./css/lab7-style.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="shortcut icon" href="./extras/favicon/favicon-32x32.png" type="image/x-icon">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
