--- a/lab7/spotify.html
+++ b/lab7/spotify.html
@@ -14,7 +14,7 @@
     <meta property="og:locale" content="en_US">
 
     <link rel="canonical" href="https://hulanbn.github.io/jrabitu/lab6.html">
-    <link rel="stylesheet" href="./css/lab7-style.css">
+    <link rel="stylesheet" href="/jrabitu/lab7/lab7-style.css">
 
     <link rel="shortcut icon" href="./extras/favicon/favicon-32x32.png" type="image/x-icon">
 
