--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li> <a href="./lab9.html">lab9</a></li>
         <li> <a href="./lab10.html">lab10</a></li>
         <li> <a href="./bie-daalt.html">bie daalt</a></li>
+        <li> <a href="./yg-final-bd/bd.html">yg final ni daalt</a></li>
     
     </ul>
     
